--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_main2">Main2Activity</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_record">Record</string>
 </resources>
