--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="action_record">Record</string>
+    <string name="action_gallery">Gallery</string>
+    <string name="tab_all">All</string>
+    <string name="tab_group">Group</string>
 </resources>
