--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,15 @@
     <string name="action_gallery">Gallery</string>
     <string name="tab_all">All</string>
     <string name="tab_group">Group</string>
+
+    <string name="nav_example5">Grid Section with Header</string>
+
+    <string name="top_rated_movies_topic">Top Rated Movies</string>
+    <string name="most_popular_movies_topic">Most Popular Movies</string>
+
+    <string name="group_title">Group #%1$s</string>
+
+    <string name="more">MORE</string>
+    <string name="see_more">See more..</string>
+    <string name="failed_load">Failed to load, tap to try again.</string>
 </resources>
