--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="action_gallery">Gallery</string>
     <string name="tab_all">All</string>
     <string name="tab_group">Group</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
